# kse-it-future-fest

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: deploy.yml
